# marl-macro-modeling

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Snakefile  pyproject.toml  requirements.txt  run_dynare2rl.sh
conf/: config.yaml
conf/dynare/: config.yaml
conf/envs/: rbc.yaml
docker/: .dockerignore  dockerfile
docker/julia_dynare/: julia.Dockerfile  main.jl
dynare/conf/: config.yaml
dynare/docker/: julia.Dockerfile  main.jl  main.py
examples/: dataset.ipynb  example.ipynb  infer_model.ipynb  shocks_size.ipynb  validate_rbc_v2.ipynb
examples/validation_visual/: Aguiar_Gopinath_2007.ipynb  Born_Pfeifer_2018_MP.ipynb  Caldara_et_al_2012.ipynb  Collard_2001_example1.ipynb  FV_et_al_2007_ABCD.ipynb  Faia_2008.ipynb  GarciaCicco_et_al_2010.ipynb  Hansen_1985.ipynb  McCandless_2008_Chapter_13.ipynb  McCandless_2008_Chapter_9.ipynb  RBC_baseline.ipynb  RBC_capitalstock_shock.ipynb  RBC_news_shock_model.ipynb  SGU_2004.ipynb  rbc_state_dependent_GIRF.ipynb
lib/: __init__.py  config.py  dataset.py  dynare_traj2rl_transitions.py  generate_dataset.py  my_utils.py  plots.py  production_funcs.py  rewards.py  utility_funcs.py  utils.py  validate_analytical_step.py
lib/data/: generate_data.py
lib/envs/: GeneratingDataSet.py  MARLMacroeconomicEnv.py  RBCEconomyWithPolicyEnv.py  __init__.py  environment_base.py  garcia_cicco_et_al_2010.py  junk.ipynb  ncg.py  nkm.py  ramsey.py  rbc.py  rbc_economy_with_policy.py  rbc_economy_with_policy_env.py  rbc_priority_based_weighted_contract.py  rbc_v2.py  rbc_with_irrational_behavior.py
lib/models/: llama-baseline.py  (+1 more)
llama-embeddings/: config.yml  lora_tasks.jsonl
new_keynesian_model/: README.md  nk_model.mod  nkm.ipynb  run_dynare.jl
notebooks/: dataset.ipynb  dynare_dynamics2rl_transitions.ipynb  infer_model.ipynb
pipeline/: infer_model.ipynb  run_pipeline.py
reports/: dataset_variety_report.md
research/: utils.py  validation.ipynb
scripts/: dataset_variety_report.py
tests/: test_envs.py
(+69 files in other folders)
