[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lib"
version = "0.1.0"
description = "MARL Macro Modelling"

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",

]
requires-python = "~=3.11"
dependencies = ["lightning>=2.6.0,<3", "torch>=2.9.1,<3", "transformers>=4.57.3,<5", "omegaconf"]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["lib"]
force_sort_within_sections = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
lib = { path = ".", editable = true }

[tool.pixi.tasks]
dynare = "DYNARE_PATH=/opt/homebrew/opt/dynare/lib/dynare/matlab python lib/dynare_traj2rl_transitions.py metadata.num_samples=1000"
dataset = """DYNARE_PATH=/opt/homebrew/opt/dynare/lib/dynare/matlab python lib/generate_dataset.py train.dynare_output_path=data val.dynare_output_path=data workdir=data/processed"""
dataset-variety = "python scripts/dataset_variety_report.py data/processed/train"
pipeline = { cmd = [
  "sh",
  "-c",
  "KMP_DUPLICATE_LIB_OK=TRUE python pipeline/run_pipeline.py metadata.output_dir=experiments metadata.track=False dataset.enabled=True dataset.workdir=data/processed train.epochs=300 dataset.train.dynare_output_path=data dataset.val.dynare_output_path=data 'metadata.comment=experimental run'",
] }

[tool.pixi.dependencies]
gymnasium = ">=0.26.3,<0.27"
numpy = ">=2.4.0,<3"
pandas = ">=2.3.3,<3"
pyarrow = ">=18.0.0,<19"
scikit-learn = ">=1.6.0,<2"
scipy = ">=1.14.0,<2"
hydra-core = ">=1.3.2,<2"
tqdm = ">=4.67.1,<5"
clearml = ">=2.1.1,<3"
ipykernel = ">=7.1.0,<8"
notebook = ">=7.5.1,<8"
plotly = ">=6.5.0,<7"
matplotlib = ">=3.10.8,<4"
seaborn = ">=0.13.2,<0.14"
typer = ">=0.21.0,<0.22"
loguru = ">=0.7.3,<0.8"
python-dotenv = ">=1.2.1,<2"
